# BudgetTrip-Agents

./: .env.example  .gitignore  README.md  __main__.py  cli.py  pyproject.toml  requirements.txt
application/ports/: __init__.py  budget_port.py  notifier_port.py  planner_port.py  progress_port.py  requirements_port.py  search_port.py  tracing_port.py  writer_port.py
application/services/: itinerary_renderer.py
application/use_cases/: __init__.py  plan_trip_use_case.py
domain/: __init__.py  entities.py  exceptions.py
frontend/: README.md  index.html  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AppHeader.tsx  ChatInterface.tsx  ItineraryModal.tsx  MessageBubble.tsx  TripActionPanel.tsx
frontend/src/lib/: api.ts  dates.ts
frontend/src/pages/: ChatPage.tsx  (+1 more)
infrastructure/: config.py  factory.py
infrastructure/agents_sdk/: __init__.py  instructions.py  planner_agent.py  requirements_agent.py  search_agent.py  tracing.py  writer_agent.py
infrastructure/notifications/: __init__.py  email_sender.py  ics_exporter.py  null_email_sender.py  websocket_reporter.py
infrastructure/tools/: budget_logic.py  calculate_budget_tool.py
interfaces/api/: dependencies.py  main.py
scripts/: run_trip.py
tests/: conftest.py  test_skeleton.py
tests/application/: test_calendar_export.py  test_itinerary_renderer.py  test_plan_trip_use_case.py  test_tracing_port.py
tests/infrastructure/: test_agents_sdk.py  test_calculate_budget_tool.py  test_notifications.py  test_requirements_agent.py
tests/interfaces/: test_api.py  test_chat_api.py
(+12 files in other folders)
